--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 }
         .container {
             font-family: 'klamp_205_monolight', Arial, sans-serif; /* Custom font for static text */
-            font-size: 20px;
+            font-size: 25px;
         }
         .text-static {
             color: black;
         }
         .text-dynamic {
-            font-family: 'klamp_205_monoregular', Arial, sans-serif; /* Custom font for dynamic text */
+            font-family: 'klamp_205_monobold', Arial, sans-serif; /* Custom font for dynamic text */
             color: red;
             display: inline;
         }
