--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             color: black;
         }
         .text-dynamic {
-            font-family: 'klamp_205_monobold', Arial, sans-serif; /* Custom font for dynamic text */
+            font-family: 'klamp_205_monomedium', Arial, sans-serif; /* Custom font for dynamic text */
             color: red;
             display: inline;
         }
