--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 
     <script>
         const phrases = [
-            "Design to Manufacture", 
             "Engineering", 
             "Lighting", 
+            "Design to Manufacture",
             "R&D", 
-            "Product Design", 
             "Product Development", 
             "CAD", 
-            "Solidworks"
+            "Solidworks",
+            "Product Design"
         ];
 
         let currentPhrase = 0;
