--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 <body>
     <div class="container">
         <span class="text-static">I specialise in </span>
-        <span class="text-dynamic" id="dynamicText"></span>
-        <span class="full-stop">.</span>
+        <span class="text-dynamic" id="dynamicText"></span><span class="full-stop">.</span>
     </div>
 
     <script>
