--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <script>
         const phrases = [
-            "Engineering", 
+            "Mechanical Engineering", 
             "Lighting", 
             "Design to Manufacture",
             "R&D", 
