--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
     <div class="container">
         <!-- Updated line for "My name is" and "William Huon" -->
-        <span class="intro">My name is </span><span class="name">WILLIAM HUON</span><span class="full-stop">.</span><br>
+        <span class="intro">My name is </span><span class="name">WILLIAM HUON</span><span class="full-stop">.</span><br><br>
     <span class="text-static">I specialise in </span>
     <span class="text-dynamic" id="dynamicText"></span><span class="full-stop">.</span>
 </div>
