--- a/index_mmd.html
+++ b/index_mmd.html
@@ -102,20 +102,20 @@
 <body>
     <div class="container">
         <!-- Updated line for "My name is" and "William Huon" -->
-        <span class="intro">My name is </span><span class="name">WILLIAM HUON</span><span class="full-stop">.</span><br><br>
-    <span class="text-static">I specialise in </span>
+        <span class="intro">We are </span><span class="name">millimetric.design</span><span class="full-stop">.</span><br><br>
+    <span class="text-static">We specialise in </span>
     <span class="text-dynamic" id="dynamicText"></span><span class="full-stop">.</span>
 </div>
 
 <script>
     const phrases = [
-        "Mechanical Engineering", 
+        "Design",
+        "Engineering",
         "Lighting", 
         "Design to Manufacture",
         "R&D", 
         "Product Development", 
         "CAD", 
-        "Solidworks",
         "Product Design"
     ];
 
