--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         .container {
             font-family: 'klamp_205_monolight', Arial, sans-serif;
-            font-size: 15px;
+            font-size: 20px;
         }
 
         .text-static {
@@ -80,9 +80,9 @@
 
         .text-dynamic {
             font-family: 'klamp_205_monomedium', Arial, sans-serif;
-            color: red;
+            color: #f29e1f;
             display: inline;
-            font-size: 15px;
+            font-size: 20px;
         }
 
         .full-stop {
@@ -92,13 +92,13 @@
         .intro {
             font-family: 'klamp_205_monolight', Arial, sans-serif;
             color: black;
-            font-size: 15px;
+            font-size: 20px;
         }
 
         .name {
             font-family: 'klamp_205_monomedium', Arial, sans-serif;
             color: black;
-            font-size: 15px;
+            font-size: 20px;
         }
     </style>
 </head>
