--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
 <body>
     <div class="container">
         <!-- Updated line for "My name is" and "William Huon" -->
-        <span class="intro">We are </span><span class="name">millimetric.design</span><span class="full-stop"></span><br><br>
-    <span class="text-static">We specialise in </span>
+        <span class="intro">we are </span><span class="name">millimetric.design</span><span class="full-stop"></span><br><br>
+    <span class="text-static">we specialise in </span>
     <span class="text-dynamic" id="dynamicText"></span><span class="full-stop">.</span>
 </div>
 
 <script>
     const phrases = [
-        "Design",
-        "Engineering",
-        "Lighting", 
-        "Design to Manufacture",
+        "design",
+        "engineering",
+        "lighting", 
+        "design to manufacture",
         "R&D", 
-        "Product Development", 
+        "product development", 
         "CAD", 
-        "Product Design"
+        "product design"
     ];
 
     let currentPhrase = 0;
